--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,20 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.ketan.MainActivity">
 
-    <TextView
-        android:text="Hello World!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+   <EditText
+       android:layout_width="fill_parent"
+       android:layout_height="100dp"
+       android:hint="Massage"
+       android:id="@+id/SMSBODY"
+       android:gravity="top|left"/>
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="SEND"
+        android:gravity="center"
+        android:textColor="18sp"
+        android:id="@+id/Send"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="130dp"/>
 </RelativeLayout>
